# deception-probe

./: .gitattributes  .gitignore  DATA_LOCATIONS.md  DeceptionProbe_Experiment3_Sycophancy.ipynb  GUIDE.md  Methodology.md  README.md  RUN_GUIDE.md  analysis_findings.txt  colab_setup.py  email_to_belinkov.md  experiment_100.py  experiment_500.py  experiment_500_deepseek_v2_lite.py  experiment_500_gemma2.py  experiment_500_llama70b.py  experiment_500_llama70b_v2.py  experiment_500_mistral123b.py  experiment_500_phi3.py  experiment_500_qwen72b.py  experiment_spontaneous_llama8b.py  pyproject.toml  requirements.txt  slide_content.md
data/: download_all.py
docs/: PROJECT_CONTEXT.md
phase1_archive/: experiment_liars_bench_validation.py
research_notes/: dataset_analysis_findings.txt  dataset_research.txt  experiment_progress.txt  liars_bench_data_structure.txt  liars_bench_methodology_findings.txt  liars_bench_paper_findings.txt  pivot_research_notes.txt  response_analysis.txt
results/: 100_scenario_results_report.md  FINDINGS.md  exp02b_labeled.json  exp02b_relabeled.json  exp02b_responses.json  exp02c_cross_phase.json  exp02c_probe_results.json  exp02c_probe_results_aijudge.json  exp04_findings.md  exp05_deception_types.json  stage1_results.json  stage2_results_mistral.json  stage6_results.json  stage7_results.json
results/mistral/: run_output.md
results_spontaneous/: EXPERIMENT_RESULTS.txt
scripts/: generate_scenarios.py  generate_scenarios_round2.py  probe_rerun.py  probe_validate.py  probe_with_new_labels.py  relabel_with_judge.py
src/: __init__.py  utils.py
(+42 files in other folders)
